# miniml

./: README.md  miniml.cabal
docs/: grammar.txt
haskell/: miniml.cabal
impls/c/: .clang-format  CMakeLists.txt  lexer.c  lexer.h  main.c  parser.h  syntax.h
impls/fsharp/: Program.fs  fsharp.fsproj
impls/fsharp/src/: Lexer.fs  Server.fs  Token.fs
impls/haskell/: .gitignore  miniml.cabal
impls/haskell/src/: Error.hs  Machine.hs  Main.hs  Typechecker.hs
impls/ocaml/: .gitignore  .ocamlformat  Makefile  dune  dune-project  lexer.ml  main.ml  miniml  miniml.ml  parser.ml  syntax.ml
miniml_repl/: Cargo.toml
miniml_repl/src/: line_editor.rs  main.rs  syntax_highlight.rs
src/: Compiler.hs  Error.hs  Lexer.x  Machine.hs  Main.hs  Parser.y  Typechecker.hs
