cabal-version:      2.4
name:               miniml
version:            0.1.0.0
synopsis:           MiniML implementation in Haskell.
-- description:
bug-reports:        https://github.com/aloussase/miniml
license:            MIT
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
copyright:          Alexander Goussas 2023
category:           Programming Langue

executable miniml
    ghc-options:    -Wall
    main-is:          Main.hs
    other-modules:    Lexer
                    , Parser
                    , Typechecker
                    , Error
                    , Compiler
                    , Machine
    build-depends:    base ^>=4.16.4.0
                    , array
                    , extra
                    , mtl
                    , network-simple
                    , bytestring
    build-tool-depends: happy:happy, alex:alex
    hs-source-dirs:   src
    default-language: Haskell2010
